2004-05-30 Robert Helgesson <rhelgesson@sourcemage.org>
	* init.d/mountnetwork: Fixed bug #6883.
	* init.d/mountnetwork.conf: Added. Allows configuration of which
	  filesystems that will be mounted.

2004-05-29 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, gcc-3.4.patch: fix compilation with gcc 3.4

2004-04-27 Eric Schabell <eschabell@sourcemage.org>
	* ifup: removed ending &&'s, fouls up route adding gw's.

2004-02-06 Eric Schabell <eschabell@sourcemage.org>
	* ifup: uses 'gw' in route_up instead of 'gateway', bug #5665.

2004-01-25 Robert Helgesson <rhelgesson@sourcemage.org>
	* BUILD: Fixed bug #5592 with a sedit.

2004-01-19 Robert Helgesson <rhelgesson@sourcemage.org>
	* init.d/dhcpcd.conf: Adds a little info about the OPTIONS
	  variable (bug #5519).
	* HISTORY: Fit to 80 column display.

2004-01-14 hgg <hgreig@bigpond.net.au>
	* BUILD,x25_address-fix.patch: patch to correctly compile if 2.6.0
	  headers are used

2003-12-02 Eric Sandall <eric@sandall.us>
	* BUILD: Use INSTALL_ROOT

2003-11-07 hgg <hgreig@bigpond.net.au>
	* TRIGGERS: remove now the hostname script has been fixed to be
	  compatible with coreutils hostname

2003-11-05 Casey Harkins <charkins@pobox.com>
	* DETAILS: Update UPDATED to force ifup and init.d/network fixes

2003-10-30 Casey Harkins <charkins@pobox.com>
	* ifup: added device_is_up() (bug #4594)
	* init.d/network: fixed _OBEY_UP_ON_BOOT (bug #4593)

2003-10-10 Robert Helgesson <rycee@home.se>
	* HISTORY: Converted to new format.
	* init.d/dhcpcd.conf: Added OPTIONS to allow user-specified command
	  line options for dhcpcd (bug #4512).
	* ifup: Added support for OPTIONS variable (bug #4512).

2003-10-03 Robert Helgesson <rycee@home.se>
	* Modified ifup and ifdown to work with interface aliases (bug #4286)

2003-09-23 Eric Sandall <eric@sandall.us>
	* Fix for ifup from Robert

2003-09-23 Robert Helgesson <rycee@home.se>
	* Update of network device file format, completely backwards