@@ -8,8 +8,9 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
          ENTERED=20010922
          UPDATED=20040206
       LICENSE[0]=GPL
+       BUILD_API=2
       MAKE_NJOBS=1
-           SHORT="net-tools contains essential tools for networking."
+           SHORT="Essential tools for networking."
 cat << EOF
 The Net-tools package contains the arp, hostname, ifconfig, netstat,
 plipconfig rarp, route, and slattach programs.
